--- a/email_template.html
+++ b/email_template.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
+<html>
+<head><meta charset='utf-8'></head>
 <body>
-
+<p>Hey <%= firstName %>,</p>
+<br>
+<p>
+  How are you doing? I'm doing well. It's been like <%= numMonthsSinceContact %> months
+  since we last talked. I'm learning to code full-time at Fullstack Academy and enjoying
+  my time.
+</p>
+<p>
+  I've been blogging about my experiences at Fullstack on my blog.
+  Check out my new posts here:
+  <a href="http://haileyckeen.tumblr.com/">My Blog</a>
+</p>
+<p>
+  Talk soon,<br>
+  Hailey
+</p>
 </body>
 </html>
